compiler/tools/fpp-check/test/state_machine/transition_graph/choice_cycle.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/transition_graph/choice_cycle.fpp:4.3
  choice C1 { if g enter S else enter C2 }
  ^
error: encountered a junction cycle:
  junction transition at [ local path prefix ]/compiler/tools/fpp-check/test/state_machine/transition_graph/choice_cycle.fpp:4.33 to junction C2
  junction transition at [ local path prefix ]/compiler/tools/fpp-check/test/state_machine/transition_graph/choice_cycle.fpp:5.33 to junction C1
